--- a/sys-server/sys-web/src/main/resources/application-dev.yml
+++ b/sys-server/sys-web/src/main/resources/application-dev.yml
@@ -24,9 +24,9 @@ spring:
   datasource: #以下数据库部分自行修改
     type: com.alibaba.druid.pool.DruidDataSource
     driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.7.34:3306/fastdevelop?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
-    username: entore
-    password: entore
+    url: jdbc:mysql://10.37.251.224:3309/fastdevelop?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+    username: dev
+    password: 458kT*!W
     dbcp2:
       max-idle: 10
       max-wait-millis: 10000
